Wed Aug 28 17:20:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (hpux_attr_getstackaddr): basic support for the
	  get_stack() under HP-UX.  based on the patch by michal@rokos.cz
	  (Michal Rokos) at [ruby-core:56645].  [Feature #8793]

Wed Aug 28 11:24:20 2013  Michal Rokos  <michal@rokos.cz>

	* configure.in (sys/pstat.h): fix missing header check for
	  missing/setproctitle.c on HP-UX.  [ruby-core:56644] [Bug #8792]

Wed Aug 28 04:54:33 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_ssl.c (ossl_ssl_read):  Replace duplicate
	  wait_writable with wait_readable.

Tue Aug 27 17:18:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/timeout.rb (Timeout#timeout): skip rescue clause only when no
	  exception class is given.

Tue Aug 27 17:02:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): should write in binary mode.  based on a
	  patch by godfat (Lin Jen-Shin) at [ruby-core:56556].
	  [ruby-core:56518] [Bug #8767]

Tue Aug 27 17:02:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): move common open flags.

Tue Aug 27 16:56:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (enumerator_size): use rb_check_funcall() instead of
	  respond_to? and call.

	* enumerator.c (enumerator_each): ensure that argument array size
	  does not overflow at appending.

Tue Aug 27 16:46:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_index, rb_ary_rindex): use optimized equality to
	  improve performance.  [Feature #8820]

	* vm_insnhelper.c (rb_equal_opt): optimized equality function.

Tue Aug 27 16:11:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (opt_eq_func): use RBASIC_CLASS() instead of HEAP_CLASS_OF().

	* insns.def (opt_plus, opt_minus, opt_mult, opt_div, opt_mod, opt_lt),
	  (opt_gt, opt_ltlt, opt_aref, opt_aset, opt_length, opt_size),
	  (opt_empty_p, opt_succ): ditto.
